fixed weird grey bar on mobile view above footer

--- a/stylesheets/partials/base/base.scss
+++ b/stylesheets/partials/base/base.scss
@@ -5,6 +5,7 @@ body {
   font-family: $base-font;
   z-index: -1;
   color: $dark-grey;
+  background-color: white;
 }
 
 p {
